# aio-ddd-utils

./: .gitignore  README.md  pyproject.toml
docs/: messages.md  rabbit_messagebus.md
src/aioddd_utils/: rmq_message_bus.py
src/aioddd_utils/domain_message/: __init__.py  _fields.py  _fields.pyi  base.py  exceptions.py  fields.py  messages.py
src/dddm_rabbit/: abstract.py  base.py  domain_clients.py  exceptions.py  messagebus.py  utils.py
src/dddmisc/: __init__.py  abstract.py  aggregate.py  fields.py  fields.pyi  messages.py  messages.pyi
src/dddmisc/domain_message/: _fields.py  base.py  messages.py
src/dddmisc/exceptions/: __init__.py  core.py  errors.py
src/dddmisc/messagebus/: __init__.py  abstract.py  base.py  typing.py
src/dddmisc/messagebus/rabbitmq/: __init__.py  abstract.py  base.py  domain_clients.py  messagebus.py
src/dddmisc/messages/: __init__.py  __init__.pyi  abstract.py  base.py  core.py  domain_command.py  domain_event.py  fields.py  fields.pyi  messages.py  response.py  structure.py
tests/: conftest.py
tests/integration/: conftest.py  test_async_rabbit_domain_message_bus.py  test_sync_rmq_message_bus.py
tests/unit/: test_domain_exceptions.py  test_domain_message.py  test_domain_messages.py  test_external_message_bus.py  test_unit_of_work.py
